--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "antd": "^4.22.6",
     "axios": "^0.27.2",
     "chart.js": "^3.9.1",
+    "dotenv": "^16.0.1",
+    "dotenv-webpack": "^8.0.1",
     "html-react-parser": "^3.0.1",
     "millify": "^5.0.0",
     "moment": "^2.29.4",
